--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
+# 忽略所有 node_modules
+node_modules/
+client/node_modules/
 server/node_modules/
-/.pnp
-.pnp.js
 
-# testing
-/coverage
+# 忽略編譯輸出
+client/build/
+server/build/
+dist/
 
-# production
-/build
+# 環境變數
+.env
+.env.*.local
 
-# misc
+# 系統檔案
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# VSCode
+.vscode/
+
+# 測試覆蓋率
+coverage/
+
+# 日誌
+*.log
+
+# Yarn PnP
+.pnp
+.pnp.js
